--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+      "> 1%",
+      "last 3 versions",
+      "IE 9"
     ],
     "development": [
       "last 1 chrome version",
